# my-gemini-requestor

./: README.md  pyproject.toml
src/my_gemini_requestor/: __init__.py
